Fixed the templates and custom tag loading

--- a/dashboard/templates/dashboard/progress.html
+++ b/dashboard/templates/dashboard/progress.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>HELLO</title>
-</head>
-<body>
-
-</body>
-</html>
+<div id="{{list}}">
+	<div><h3>{{list}}</h3></div>
+	<div>{{rwc}}</div>
+	<DIV>{{lwc}}</DIV>
+	<div>{{twc}}</div>
+</div>
