--- a/dashboard/templates/dashboard/page.html
+++ b/dashboard/templates/dashboard/page.html
@@ -1,8 +1,10 @@
 {% extends "./base.html" %}
-
+{% load dashboard_tags %}
 {% block content %}
 	<div id="progress">
-		{show_progress}
+		{%for list in lists %}
+			{% show_progress user list.list_type %}
+		{% endfor %}
 	</div>
 	<!--TO-DO-->
 	<div id="study-history"></div>
