--- a/study/static/css/study.css
+++ b/study/static/css/study.css
@@ -1,1 +1,24 @@
+.category {
+    padding: 20px 50px 20px 20px;
+}
+
+.review {
+    padding: 20px 50px 20px 50px;
+}
+
+.progress {
+    padding: 20px 50px 20px 50px;
+}
+
+.categories, .tot-review-que, .words-learned {
+    margin: 10px 15px 10px 15px;
+    padding: 20px 50px 20px 45px;
+    #border: 1px solid red;
+}
+
+.button {
+    margin: 10px 15px 10px 15px;
+    padding: 10px 10px 10px 10px;
+}
+
 
