--- a/study/templates/study/base.html
+++ b/study/templates/study/base.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
 	<title>Vocabulary Builder</title>
+	<link rel="stylesheet" href="{% static 'css/study.css' %}">
 </head>
 <body>
-<h1>Base template here</h1>
+<h2>Study Here</h2>
+{% block content %}
+{% endblock %}
 </body>
 </html>
