Tests History working

--- a/dashboard/templates/dashboard/test.html
+++ b/dashboard/templates/dashboard/test.html
@@ -1,6 +1,7 @@
+
 <div id="{{test_id}}">
-	<div><h3>{{test_id}}</h3></div>
-	<div>Score:{{sc}}/{{tw}}</div>
+	<div><h4>{{test_id}}</h4></div>
+	<div>Score:{{sc}}/{{twc}}</div>
 	<div>Date: {{date}}</div>
 	
 </div>
