--- a/dashboard/templates/dashboard/page.html
+++ b/dashboard/templates/dashboard/page.html
@@ -13,7 +13,7 @@
 	<h3 align="center">TESTS</h3>
 	<div id="test-history">
 		{%for test in tests %}
-			{% show_test_history test %}
+			{% show_test_history user test %}
 		{% endfor %}
 	</div>
 {% endblock content %}
