--- a/dashboard/templates/dashboard/test.html
+++ b/dashboard/templates/dashboard/test.html
@@ -1,6 +1,6 @@
 
 <div id="{{test_id}}">
-	<div><h4>{{test_id}}</h4></div>
+	<div><h4><a href="{% url 'info_redirect' test_id %}">{{test_id}}</a></h4></div>
 	<div>Score:{{sc}}/{{twc}}</div>
 	<div>Date: {{date}}</div>
 	
