--- a/study/templates/study/review.html
+++ b/study/templates/study/review.html
@@ -3,26 +3,26 @@
 {% block content %}
 {% load mathfilters %}
 {% load studytags %}
-<h2>{{ category }}</h2>
-{% if l_word_num == learn_words.count %}
-    <form method="POST" action="{% url 'review' 0 %}">{% csrf_token %}
+<h2>Review</h2>
+<!--{% if r_word_num == review_words.count %}
+    <form method="POST" action="{% url 'study' 0 %}">{% csrf_token %}
         <div>
-            <label>{{ learn_words|get_word:l_word_num }}</label>
+            <label>{{ review_words|get_word:r_word_num }}</label>
         </div>
         <div>
-            <label>{{ learn_words|get_def:l_word_num }}</label>
+            <label>{{ review_words|get_def:r_word_num }}</label>
         </div>
         <div>
             <button type="submit" value="{{ category }}" name="category">Next</button>
         </div>
     </form>
-{% elif learn_words.count %}
-    <form method="POST" action="{% url 'learn' l_word_num|add:1 %}">{% csrf_token %}
+{% elif review_words.count %}
+    <form method="POST" action="{% url 'learn' r_word_num|add:1 %}">{% csrf_token %}
         <div>
-            <label>{{ learn_words|get_word:l_word_num }}</label>
+            <label>{{ review_words|get_word:r_word_num }}</label>
         </div>
         <div>
-            <label>{{ learn_words|get_def:l_word_num }}</label>
+            <label>{{ review_words|get_def:r_word_num }}</label>
         </div>
         <div>
             <button type="submit" value="{{ category }}" name="category">Next</button>
@@ -34,5 +34,8 @@
             <label>Congratulations! You have learned all the words</label>
         </div>
     </form>
-{% endif %}
+{% endif %}-->
+<form method="POST">{% csrf_token %}
+    {{ form.as_p }}
+</form>
 {% endblock %}
