--- a/study/templates/study/study.html
+++ b/study/templates/study/study.html
@@ -1,8 +1,9 @@
 {% extends 'study/base.html' %}
 
 {% block content %}
+{% load mathfilters %}
 {% load studytags %}
-<form method="POST" action="{% url 'learn' %}">{% csrf_token %}
+<form method="POST" action="{% url 'learn' l_word_num|add:1 %}">{% csrf_token %}
 
 <label class="category"><strong>Category</strong></label>
 <label class="review"><strong>Review</strong></label>
@@ -10,8 +11,8 @@
 
 {% for category in categories %}
     <label class="categories">{{ category }}</label>
-    <label class="tot-review-que">{{ tot_review_que }}</label>
-    <label class="words-learned">{{ words_learned }}/{% get_value category %}</label>
+    <label class="tot-review-que">{% get_tot_rewords username category %}</label>
+    <label class="words-learned">{% get_tot_lwords username category %}/{% get_tot_words category %}</label>
     <button name="category" type="submit" class="review-btn" value="{{ category }}">Review</button>
     <button name="category" type="submit" class="learn-btn" value="{{ category }}">Learn</button>
     <br>
