--- a/study/templates/study/study.html
+++ b/study/templates/study/study.html
@@ -1,9 +1,8 @@
 {% extends 'study/base.html' %}
 
 {% block content %}
-{% load mathfilters %}
-{% load studytags %}
-<form method="POST" action="{% url 'learn' l_word_num|add:1 %}">{% csrf_token %}
+{% load studytags mathfilters %}
+<form method="POST" id="form_data" action="{% url 'study' %}">{% csrf_token %}
 
 <label class="category"><strong>Category</strong></label>
 <label class="review"><strong>Review</strong></label>
@@ -13,13 +12,47 @@
     <label class="categories">{{ category }}</label>
     <label class="tot-review-que">{% get_tot_rewords username category %}</label>
     <label class="words-learned">{% get_tot_lwords username category %}/{% get_tot_words category %}</label>
-    <button name="category" type="submit" class="review-btn" value="{{ category }}">Review</button>
-    <button name="category" type="submit" class="learn-btn" value="{{ category }}">Learn</button>
+    <button name="category" type="submit" class="review-btn" value="{{ category }}" onclick="can_review('{{ category }}')">Review</button>
+    <button name="category" type="submit" class="learn-btn" value="{{ category }}" onclick="can_learn('{{ category }}')">Learn</button>
     <br>
 
 {% endfor %}
 
-
 </form>
 
+<script>
+    function can_learn(cate_gory) {
+        console.log("Inside can_learn function");
+        {% for category in categories %}
+            if(cate_gory == "{{ category }}") {
+                console.log("Chosen category:"+cate_gory);
+                if(({% get_tot_words category %} - {% get_tot_lwords username category %})==0) {
+                    //display a message
+                    console.log("No words to learn");
+                    document.getElementById("form_data").action = "{% url 'study' %}";
+                }
+                else {
+                    document.getElementById("form_data").action="{% url 'learn' l_word_nums|get_lword_num:category %}";
+                }
+
+            }
+        {% endfor %}
+    }
+    function can_review(cate_gory) {
+        console.log("Inside can_review function");
+        {% for category in categories %}
+            if(cate_gory == "{{ category }}") {
+                 console.log("Chosen category:"+cate_gory);
+                 if({% get_tot_rewords username category %}==0) {
+                    //display a message
+                    console.log("No words to review");
+                    document.getElementById("form_data").action = "{% url 'study' %}";
+                 }
+                 else {
+                     document.getElementById("form_data").action = "{% url 'review' r_word_num|add:1 %}";
+                 }
+            }
+        {% endfor %}
+    }
+</script>
 {% endblock %}
