--- a/study/static/css/study.css
+++ b/study/static/css/study.css
@@ -1,3 +1,6 @@
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+
 .category {
     padding: 20px 50px 20px 20px;
 }
@@ -20,5 +23,3 @@
     margin: 10px 15px 10px 15px;
     padding: 10px 10px 10px 10px;
 }
-
-
