--- a/register/templates/register/users.html
+++ b/register/templates/register/users.html
@@ -6,7 +6,7 @@
 				<legend class="border-bottom mb-4">Register Here</legend>
 				{{form}}
 			</fieldset>
-			<div class="fomr-group">
+			<div class="form-group">
 				<button class="btn btn-outline-info" type="submit">Sign Up</button>
 			</div>
 		</form>
@@ -16,4 +16,4 @@
 			</small>
 		</div>
 	</div>
-{% end blockcontent %}
+{% endblock content %}
