--- a/register/templates/register/users.html
+++ b/register/templates/register/users.html
@@ -1,4 +1,13 @@
-{% extends "register/base.html" %}
+<div class="col-md-8">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+          
+</div>
 {% block content %}
     <div class="content-section">
         <form method="POST">
