Links to learn and review in sidear added

--- a/study/templates/study/base.html
+++ b/study/templates/study/base.html
@@ -47,10 +47,10 @@
 					</a>
 					<ul class="collapse list-unstyled" id="studySubmenu">
 						<li>
-							<a href="#">Learn</a>
+							<a href="{% url 'go_learn' %}">Learn</a>
 						</li>
 						<li>
-							<a href="#">Review</a>
+							<a href="{% url 'go_review' %}">Review</a>
 						</li>
 					</ul>
 				</li>
