--- a/study/templates/study/review.html
+++ b/study/templates/study/review.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<body onload="set_form_meth();disable_next_btn();checkAns();" onunload="check_meth();" id="body">
+<body onload="set_form_meth();disable_next_btn();" onunload="check_meth();" id="body">
 {% load reviewtags mathfilters %}
 <h2>Review</h2>
 {% if review_words.count %}
