--- a/study/templates/study/navbar.html
+++ b/study/templates/study/navbar.html
@@ -74,7 +74,8 @@
                 <span class="navbar-text"> | </span>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">SignUp</a>
+
+                <a class="nav-link" href="{% url 'register:signup' %}">SignUp</a>
             </li>
         </ul>
     </div>
