--- a/study/templates/study/base.html
+++ b/study/templates/study/base.html
@@ -61,7 +61,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="{% url 'dashboard' %}">
 						<i class="glyphicon glyphicon-dashboard mr-2 glyphicon-globe fa-lg"></i>
 						<label>DashBoard</label>
 					</a>
