--- a/study/templates/study/base.html
+++ b/study/templates/study/base.html
@@ -34,7 +34,7 @@
 <div style="float: left;">
 	<div class="wrapper">
 		<!-- Sidebar -->
-		<nav id="sidebar" class="bg-dark">
+		<nav id="sidebar" class="navbar-expand-md navbar-expand-sm sticky-top bg-dark">
 			<div class="sidebar-header bg-secondary">
 				<h3>Vocabulary Builder</h3>
 				<strong>VB</strong>
@@ -88,7 +88,7 @@
 	</div>
 </div>
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+<nav class="navbar navbar-expand-md navbar-expand-sm bg-dark navbar-dark sticky-top">
 
 	<button type="button" id="sidebarCollapse" class="navbar-btn btn-outline-light btn-dark">
 		<i class="fas fa-bars"></i>
