--- a/study/templates/study/navbar.html
+++ b/study/templates/study/navbar.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+<nav class="navbar navbar-expand-md navbar-expand-sm bg-dark navbar-dark sticky-top">
 
 	<button type="button" id="sidebarCollapse" class="navbar-btn btn-outline-light btn-dark">
 		<i class="fas fa-bars"></i>
