--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -1,4 +1,8 @@
 {% extends "register/base.html" %}
+{%block title%}
+<title> Log In</title>
+{%endblock%}
+
 {% block content %}
     <div class="content-section">
         <form method="POST">
