--- a/register/templates/register/users.html
+++ b/register/templates/register/users.html
@@ -1,3 +1,9 @@
+{% extends "register/base.html" %}
+
+{%block title%}
+    <title>Sign Up</title>
+{% endblock %}
+
 <div class="col-md-8">
           {% if messages %}
             {% for message in messages %}
