--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -17,7 +17,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need An Account? <a class="ml-2" href="{% url 'signup' %}">Sign Up Now</a>
+                Need An Account? <a class="ml-2" href="{% url 'register:signup' %}">Sign Up Now</a>
             </small>
         </div>
     </div>
