--- a/study/templates/study/navbar.html
+++ b/study/templates/study/navbar.html
@@ -68,7 +68,7 @@
     <div class="right:0">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             <li class="nav-item">
                 <span class="navbar-text"> | </span>
