--- a/study/static/css/study.css
+++ b/study/static/css/study.css
@@ -1,40 +1,44 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+.study-content .btn {
+    border-radius: 30px;
+}
 
 .study-content {
     margin: 10% 12%;
-
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    background-image: linear-gradient(#0f0c29, #302b63, #24243e);
 }
 
 .wrapper {
     display: flex;
-    width: 100%;
+    align-items: stretch;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+}
 
 #sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    height: 100vh;
     width: 250px;
     top: 0;
     left: 0;
-    height: 100vh;
     z-index: 999;
-    //background: #7386D5;
     color: #fff;
-    transition: all 0.5s;
+    transition: all 0.3s;
 }
 
 #sidebar.active {
+    /*margin-left: -250px;*/
     min-width: 45px;
     max-width: 45px;
     text-align: right;
 }
 
 #sidebar .sidebar-header {
+    /*background: #6d7fcc;*/
     padding: 20px;
 }
 
@@ -54,7 +58,7 @@ body {
 a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
-    transition: all 0.5s;
+    transition: all 0.3s;
 }
 
 a[data-toggle="collapse"] {
@@ -82,11 +86,6 @@ a[data-toggle="collapse"] {
     padding: 20px 0;
 }
 
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
-}
-
 #sidebar ul li a {
     padding: 10px;
     font-size: 1.1em;
@@ -110,11 +109,13 @@ a[data-toggle="collapse"] {
 #sidebar ul li a:hover {
     color: #666666;
     background: #fff;
+    /*color: #7386D5;*/
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
     background: #292b2c;
+    /*background: #6d7fcc;*/
 }
 
 #sidebar.active ul ul a {
@@ -131,9 +132,8 @@ ul ul a {
    translateX(50%) works with right: 50%
    to accurately  center the arrow */
 #sidebar.active .dropdown-toggle::after {
-    /*top: auto;
+    top: auto;
     bottom: 10px;
     right: 50%;
-    transform: translateX(50%);*/
     display: none;
 }
