--- a/study/templates/study/base.html
+++ b/study/templates/study/base.html
@@ -28,110 +28,108 @@
 	<!--Google icons-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" href="{% static 'css/study.css' %}">
+	<link rel="stylesheet" href="{% static 'css/learn.css' %}">
 </head>
 
-<div style="float: left;">
-	<div class="wrapper">
-		<!-- Sidebar -->
-		<nav id="sidebar" class="navbar-expand-md navbar-expand-sm sticky-top bg-dark">
-			<div class="sidebar-header bg-secondary">
-				<h3>Vocabulary Builder</h3>
-				<strong>VB</strong>
+<div id="content" class="fixed-top float-right">
+
+    <nav class="navbar navbar-expand-md navbar-expand-sm navbar-dark bg-dark">
+
+        <div class="container-fluid">
+
+			<button type="button" id="sidebarCollapse" class="btn btn-info">
+                <i class="fas fa-align-left"></i>
+            </button>
+			<!--Brand-->
+			<a class="navbar-brand ml-2" href="#"  style="padding: 5px 5px;width:50px;">
+				<img class="img-fluid rounded-circle" src="{% static 'images/logo.png'%}" alt="Vocabulary Builder">
+			</a>
+			<!--Toggler/collapsible button-->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<!--Navbar Links-->
+			<div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+				<ul class="navbar-nav">
+					<li class="nav-item" style="margin-left:15px;margin-right:15px;"><!--class="dropdown"-->
+						<!--<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navbardrop">Study</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="#">Learn</a>
+							<a class="dropdown-item" href="#">Review</a>
+						</div>-->
+						<a class="nav-link" href="{% url 'study' %}">Study</a>
+					</li>
+					<!--<li class="nav-item">
+						<a class="nav-link" href="#">Test</a>
+					</li>-->
+					<li class="nav-item" style="margin-left:15px;margin-right:15px;">
+						<a class="nav-link" href="{% url 'dashboard' %}">DashBoard</a>
+					</li>
+					<li class="nav-item" style="margin-left:15px;margin-right:15px;">
+						<a class="nav-link" href="#">Log out</a>
+					</li>
+				</ul>
 			</div>
-			<ul class="list-unstyled components">
-				<li class="">
-					<a href="#studySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-						<i class="fas fa-book-open mr-2 fa-lg"></i>
-						<label>Study</label>
-					</a>
-					<ul class="collapse list-unstyled" id="studySubmenu">
-						<li>
-							<a href="{% url 'go_learn' %}">Learn</a>
-						</li>
-						<li>
-							<a href="{% url 'go_review' %}">Review</a>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href="#">
-						<i class="fas fa-book mr-2 fa-lg"></i>
-						<label>Test</label>
-					</a>
-				</li>
-				<li>
-					<a href="{% url 'dashboard' %}">
-						<i class="glyphicon glyphicon-dashboard mr-2 glyphicon-globe fa-lg"></i>
-						<label>DashBoard</label>
-					</a>
-				</li>
-				<!--<li>
-					<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-						<i class="fas fa-copy"></i>
-						Pages
-					</a>
-					<ul class="collapse list-unstyled" id="pageSubmenu">
-						<li>
-							<a href="#">Page 1</a>
-						</li>
-						<li>
-							<a href="#">Page 2</a>
-						</li>
-						<li>
-							<a href="#">Page 3</a>
-						</li>
-					</ul>
-				</li>-->
-			</ul>
-		</nav>
-	</div>
+		</div>
+	</nav>
 </div>
 
-<nav class="navbar navbar-expand-md navbar-expand-sm bg-dark navbar-dark sticky-top">
+<div class="wrapper float-left" style="float:right;">
+    <!-- Sidebar -->
+    <nav id="sidebar" class="navbar-expand-md navbar-expand-sm bg-dark"><!--sticky-top float-left-->
 
-	<button type="button" id="sidebarCollapse" class="navbar-btn btn-outline-light btn-dark">
-		<i class="fas fa-bars"></i>
-	</button>
-	<!--Brand-->
-	<a class="navbar-brand ml-2" href="#"  style="padding: 19px 20px;">Logo</a>
+		<br><br><br>
+        <div class="sidebar-header bg-secondary">
+            <h3>Vocabulary Builder</h3>
+			<strong>VB</strong>
+        </div>
+        <ul class="list-unstyled components">
+            <li class="">
+                <a href="#studySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+					<i class="fas fa-book-open mr-2 fa-lg"></i>
+					<label>Study</label>
+				</a>
+                <ul class="collapse list-unstyled" id="studySubmenu">
+                    <li>
+                        <a href="{% url 'go_learn' %}">Learn</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'go_review' %}">Review</a>
+                    </li>
+                </ul>
+            </li>
+            <!--<li>
+                <a href="#">
+					<i class="fas fa-book mr-2 fa-lg"></i>
+					<label>Test</label>
+				</a>
+            </li>-->
+            <li>
+                <a href="{% url 'dashboard' %}">
+					<i class="glyphicon glyphicon-dashboard mr-2 glyphicon-globe fa-lg"></i>
+					<label>DashBoard</label>
+				</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
-	<!--Toggler/collapsible button-->
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-
-	<!--Navbar Links-->
-	<div class="collapse navbar-collapse" id="collapsibleNavbar">
-		<ul class="navbar-nav">
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navbardrop">Study</a>
-				<div class="dropdown-menu">
-					<a class="dropdown-item" href="#">Learn</a>
-					<a class="dropdown-item" href="#">Review</a>
-				</div>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Test</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">DashBoard</a>
-			</li>
-		</ul>
-	</div>
-</nav>
+<br><br><br><br>
 
 <div class="d-flex">
 {% block content %}
 {% endblock %}
 </div>
+
+
 <script>
 
 $(document).ready(function () {
 
-    $("#sidebar").mCustomScrollbar({
-         theme: "minimal"
-    });
+
 
     $('#sidebarCollapse').on('click', function () {
         // open or close sidebar
@@ -142,6 +140,7 @@ $(document).ready(function () {
         // in our CSS
         $('a[aria-expanded=true]').attr('aria-expanded', 'false');
     });
+
 
 });
 
