--- a/study/templates/study/learn.html
+++ b/study/templates/study/learn.html
@@ -6,30 +6,48 @@
 {% load mathfilters %}
 
 <body onload="set_form_meth();" onunload="check_meth();">
-<div  class="container-fluid justify-content-center" style="margin: 40px 50px;padding:10px 10px;border:solid red 1px;width:100%;">
-{% if learn_words.count %}
-    <form id="form_data" class="form">{% csrf_token %}
-        <div class="d-flex bg-dark display-3 p-5">
-            <label>{{ learn_words|get_unl_def:l_word_num }}</label>
-        </div>
-        <div class="d-flex bg-secondary display-4 justify-content-center">
-            <label>{{ learn_words|get_unl_word:l_word_num }}</label>
-        </div>
-        <div>
-            <button onclick="goto_url()" value="{{ category }}" name="category" class="btn btn-primary btn-lg btn-block">Next</button>
-            <input type="hidden" id="goback" value="no">
-        </div>
-    </form>
-{% else %}
-    <form action="{% url 'study' %}">{% csrf_token %}
-        <div>
-            <label>Congratulations! You have learned all the words</label>
-        </div>
-    </form>
-{% endif %}
-</div>
+    <div  class="container-fluid justify-content-center p-0 m-0">
+        {% if learn_words.count %}
+            <form class="form" id="form_data">{% csrf_token %}
+                <div class="p-0" id="word-def" style="height:400px;border-radius:30px;">
+                    <div class="d-flex text-light display-3 p-5 m-t-5 m-b-5 justify-content-center" id="def" style="height:250px;">
+                        <a href="javascript:void(0)" data-toggle="popover-def" data-trigger="hover">
+                            <label>{{ learn_words|get_unl_def:l_word_num }}</label>
+                        </a>
+                    </div>
+
+                    <div class="d-flex text-light display-4 p-2 m-5 justify-content-center rounded-circle" id="word">
+                        <a href="javascript:void(0)" data-toggle="popover-word" data-trigger="hover">
+                            <label>{{ learn_words|get_unl_word:l_word_num }}</label>
+                        </a>
+                    </div>
+                </div>
+                <div class="p-0 m-l-0" style="height:50px;margin-top:50px;">
+                    <button onclick="goto_url()" value="{{ category }}" name="category" class="btn btn-primary btn-lg btn-block p-0 m-l-0 h-100">
+                        <div>
+                            <b><i><label class="display-4">Next</label></i></b>
+                            <i class="fas fa-angle-right display-4 float-right" style="height:45px;"></i>
+                        </div>
+                    </button>
+                    <input type="hidden" id="goback" value="no">
+                </div>
+            </form>
+        {% else %}
+            <form action="{% url 'study' %}">{% csrf_token %}
+                <div>
+                    <label>Congratulations! You have learned all the words</label>
+                </div>
+            </form>
+        {% endif %}
+    </div>
 </body>
 <script>
+    $(document).ready(function(){
+        $('[data-toggle="popover-def"]').popover({title:"<h2><strong><i>Definition</i></strong></h2>",html: true});
+    });
+    $(document).ready(function(){
+        $('[data-toggle="popover-word"]').popover({title:"<h3><strong><i>Word</i></strong></h3>",html:true,placement:"bottom"});
+    });
     function set_form_meth() {console.log("{{ l_word_num }}");
         console.log("inside set_form_meth func");
         document.getElementById("form_data").method = "GET";
@@ -66,3 +84,33 @@
     }
 </script>
 {% endblock %}
+
+
+<!--<div  class="container-fluid justify-content-center" style="margin: 40px 0px;padding:10px 10px;width:100%;">
+{% if learn_words.count %}
+    <form id="form_data" class="form">{% csrf_token %}
+        <div class="row">
+            <div class="col-sm-11 border border-outline-dark  p-0" style="background: #;">
+                <div class="d-flex text-light display-3 p-5 m-t-5 m-b-5 justify-content-center" style="background: #aeb657;">
+                    <label>{{ learn_words|get_unl_def:l_word_num }}</label>
+                </div>
+                <div class="d-flex text-light display-4 p-5 m-t-5 justify-content-center" style="background: #5e632b;">
+                    <label>{{ learn_words|get_unl_word:l_word_num }}</label>
+                </div>
+            </div>
+            <div class="col-sm-1 float-right p-0 m-l-0">
+                <button onclick="goto_url()" value="{{ category }}" name="category" class="btn btn-primary btn-sm btn-block float-right m-l-0">
+                    <i class="fas fa-angle-right display-4" style="height:370px;"></i>
+                </button>
+                <input type="hidden" id="goback" value="no">
+            </div>
+        </div>
+    </form>
+{% else %}
+    <form action="{% url 'study' %}">{% csrf_token %}
+        <div>
+            <label>Congratulations! You have learned all the words</label>
+        </div>
+    </form>
+{% endif %}
+</div>-->
