--- a/study/templates/study/review.html
+++ b/study/templates/study/review.html
@@ -67,7 +67,7 @@
             document.getElementById("next").disabled = false;
             console.log("Disabling done successfully");
 
-            if(user_word=="{% get_re_word review_words %}") {
+            if(user_word.toLowerCase()=="{% get_re_word review_words %}") {
                 document.getElementsByTagName("input")[1].style.background = "green";
             }
             else {
