--- a/study/templates/study/base.html
+++ b/study/templates/study/base.html
@@ -69,7 +69,7 @@
 						<a class="nav-link" href="{% url 'dashboard' %}">DashBoard</a>
 					</li>
 					<li class="nav-item" style="margin-left:15px;margin-right:15px;">
-						<a class="nav-link" href="#">Log out</a>
+						<a class="nav-link" href="{% url 'logout' %}">Log out</a>
 					</li>
 				</ul>
 			</div>
