--- a/study/templates/study/study.html
+++ b/study/templates/study/study.html
@@ -21,7 +21,7 @@
                             <td class="categories">{{ category }}</td>
                             <td class="tot-review-que">{% get_tot_rewords username category %}</td>
                             <td class="words-learned">{% get_tot_lwords username category %}/{% get_tot_words category %}</td>
-                            <td><button name="category" type="submit" class="btn btn-outline-primary btn-lg" value="{{ category }}" onclick="can_review('{{ category }}')">Review</button></td>
+                            <td><button name="category" type="submit" class="btn btn-outline-primary btn-lg" value="{{ category }}" onclick="can_review('{{ category }}')" data-toggle="modal" data-target="#myModal">Review</button></td>
                             <td><button name="category" type="submit" class="btn btn-outline-primary btn-lg" value="{{ category }}" onclick="can_learn('{{ category }}')">Learn</button></td>
                         </tr>
                     {% endfor %}
@@ -31,6 +31,29 @@
     </form>
 </div>
 
+<!--
+
+<div class="modal" id="myModal" style="display:none;">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h4 class="modal-title">Review</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <div class="modal-body">
+        You have {% get_tot_rewords username category %} words to review
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+-->
 <script>
     function can_learn(cate_gory) {
         console.log("Inside can_learn function");
