--- a/study/templates/study/learn.html
+++ b/study/templates/study/learn.html
@@ -10,13 +10,13 @@
         {% if learn_words.count %}
             <form class="form" id="form_data">{% csrf_token %}
                 <div class="p-0" id="word-def" style="height:400px;border-radius:30px;">
-                    <div class="d-flex text-light display-3 p-5 m-t-5 m-b-5 justify-content-center" id="def" style="height:250px;">
+                    <div class="d-flex text-dark display-3 p-5 m-t-5 m-b-5 justify-content-center" id="def" style="height:250px;">
                         <a href="javascript:void(0)" data-toggle="popover-def" data-trigger="hover">
                             <label>{{ learn_words|get_unl_def:l_word_num }}</label>
                         </a>
                     </div>
 
-                    <div class="d-flex text-light display-4 p-2 m-5 justify-content-center rounded-circle" id="word">
+                    <div class="d-flex text-dark display-4 p-2 m-5 justify-content-center rounded-circle" id="word">
                         <a href="javascript:void(0)" data-toggle="popover-word" data-trigger="hover">
                             <label>{{ learn_words|get_unl_word:l_word_num }}</label>
                         </a>
