Modifed accordian and created modal when review words will be zero

--- a/dashboard/templates/dashboard/page.html
+++ b/dashboard/templates/dashboard/page.html
@@ -27,43 +27,56 @@
 
 	<br><br>
 
+	<h2 align="center">Instructions</h2>
+
 	 <div id="accordion">
 
 	  <div class="card">
 		<div class="card-header">
-		  <a class="card-link" data-toggle="collapse" href="#collapseOne">
-			Study
+		  <a class="card-link text-primary" data-toggle="collapse" href="#collapseOne">
+			Study#
 		  </a>
 		</div>
 		<div id="collapseOne" class="collapse show" data-parent="#accordion">
 		  <div class="card-body">
-			  <p></p>
+			  <p>
+				  You can start learning words by clicking on study <strong>link</strong> in the navbar or on the sidebar and can view your progress on dashboard
+			  </p>
 		  </div>
 		</div>
 	  </div>
 
 	  <div class="card">
 		<div class="card-header">
-		  <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-			Learn
+		  <a class="collapsed card-link text-primary" data-toggle="collapse" href="#collapseTwo">
+			Learn#
 		  </a>
 		</div>
 		<div id="collapseTwo" class="collapse" data-parent="#accordion">
 		  <div class="card-body">
-			  <p></p>
+			  <p>
+				  You will get thousands of words to learn of <strong>GRE</strong> & <strong>SAT</strong> category. You can choose any one of
+				  them and start learning. You will get <strong>5</strong> sets of words to learn every time you learn and you need to learn
+				  <strong>atleast 5</strong> words to go to next 5 words.
+			  </p>
 		  </div>
 		</div>
 	  </div>
 
 	  <div class="card">
 		<div class="card-header">
-		  <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-			Review
+		  <a class="collapsed card-link text-primary" data-toggle="collapse" href="#collapseThree">
+			Review#
 		  </a>
 		</div>
 		<div id="collapseThree" class="collapse" data-parent="#accordion">
 		  <div class="card-body">
-			<p></p>
+			<p>
+				In these you can review words which you studied before. You need to study <strong>atleast 5</strong> words to review.
+				As you study atleast 5 words you will be directed to review those words and the words studied before.
+				Words will appear after certain intervals to review and if you get the correct answer for the respective word
+				<strong>3 times</strong> then that word will be added to your progress. You can continue to learn as well.
+			</p>
 		  </div>
 		</div>
 	  </div>
