--- a/study/templates/study/base.html
+++ b/study/templates/study/base.html
@@ -77,7 +77,7 @@
 	</nav>
 </div>
 
-<div class="wrapper float-left" style="float:right;">
+<div class="wrapper float-left sticky-top" style="float:right;">
     <!-- Sidebar -->
     <nav id="sidebar" class="navbar-expand-md navbar-expand-sm bg-dark"><!--sticky-top float-left-->
 
@@ -129,8 +129,6 @@
 
 $(document).ready(function () {
 
-
-
     $('#sidebarCollapse').on('click', function () {
         // open or close sidebar
         $('#sidebar').toggleClass('active');
@@ -140,7 +138,6 @@ $(document).ready(function () {
         // in our CSS
         $('a[aria-expanded=true]').attr('aria-expanded', 'false');
     });
-
 
 });
 
